@@ -32,9 +32,14 @@ ENDIF(WIN32)
 
 # Create the library
 ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME} ${OPENJPEG_SRCS})
+SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME} PROPERTIES
+	SOVERSION ${OPENJPEG_SOVERSION}
+	VERSION ${OPENJPEG_SOVERSION}.${OPENJPEG_VERSION})
 
 # Install library
-INSTALL_TARGETS(/lib/ ${OPENJPEG_LIBRARY_NAME})
+INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}
+	DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 # Install includes files
-INSTALL_FILES(/include .h)
+INSTALL(FILES openjpeg.h
+	DESTINATION ${INCLUDE_INSTALL_DIR}/openjpeg)
